Fixes on spacing and alignment of conflict icon

--- a/web/src/app/listing/section/component.scss
+++ b/web/src/app/listing/section/component.scss
@@ -67,6 +67,7 @@ img.conflict-img {
     display:inline-block;
     vertical-align:middle;
     width: 0.9em;
+    margin-bottom: 3.4px;
 }
 span.conflict-text {
     font-size:75%;
